Fix dropdown width on mobile

--- a/styles/Form.module.css
+++ b/styles/Form.module.css
@@ -167,8 +167,12 @@
   .inputWrapper,
   .inputBox,
   .dropdownHeader,
-  .dropdownContent div,
+  .dropdownContent,
   .radio {
     width: 100%;
+  }
+  
+  .dropdownContent div {
+    width: inherit;
   }
 }
